--- a/AI-hackathon-financial-app/public/index.html
+++ b/AI-hackathon-financial-app/public/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             background-color: #f4f7fa;
         }
@@ -18,6 +18,7 @@
             color: white;
             padding: 20px;
             text-align: center;
+            position: relative;
         }
 
         main {
@@ -30,20 +31,43 @@
             background-color: #ffffff;
             border-right: 1px solid #ddd;
             padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
         }
 
         .sidebar h2 {
             font-size: 18px;
             margin-bottom: 20px;
+            color: #333;
+            border-left: 3px solid #007bff;
+            padding-left: 10px;
         }
 
         .sidebar ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
 
         .sidebar ul li {
-            margin: 10px 0;
+            margin: 8px 0;
+        }
+
+        .sidebar ul li a {
+            color: #333;
+            text-decoration: none;
+            display: block;
+            padding: 10px;
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            border-left: 3px solid transparent;
+        }
+
+        .sidebar ul li a:hover,
+        .sidebar ul li a:focus {
+            background-color: #f1f1f1;
+            border-left-color: #007bff;
+            padding-left: 12px;
+            color: #007bff;
         }
 
         .content {
@@ -58,16 +82,26 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         h2 {
             color: #007bff;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
 
         th, td {
@@ -87,10 +121,15 @@
             padding: 10px 15px;
             border-radius: 4px;
             cursor: pointer;
+            transition: all 0.2s ease;
+            font-weight: bold;
         }
 
-        button:hover, input[type="submit"]:hover {
+        button:hover,
+        input[type="submit"]:hover {
             background-color: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
 
         footer {
@@ -106,6 +145,14 @@
         canvas {
             max-width: 100%;
             height: 400px !important;
+        }
+
+        /* AddThis button styling */
+        .addthis-sm {
+            position: absolute;
+            left: 20px;
+            top: 20px;
+            z-index: 1000;
         }
     </style>
 </head>
